--- a/styles.css
+++ b/styles.css
@@ -45,10 +45,8 @@ header h1 {
 }
 
 nav {
-    display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
 }
 
 nav ul {
@@ -60,6 +58,7 @@ nav ul {
 
 nav ul li {
     margin-left: 30px;
+    margin-right: 30px;
 }
 
 nav ul li a {
@@ -141,13 +140,43 @@ footer a:hover {
 }
 
 .github-icon a {
-    font-size: 48px; /* Make icon bigger */
-    color: white; /* White color */
+    font-size: 48px;
+    /* Make icon bigger */
+    color: white;
+    /* White color */
     text-decoration: none;
     transition: transform 0.3s ease, color 0.3s ease;
 }
 
 .github-icon a:hover {
-    transform: scale(1.1); /* Slightly enlarge on hover */
-    color: #007bff; /* Change color on hover */
+    transform: scale(1.1);
+    /* Slightly enlarge on hover */
+    color: #007bff;
+    /* Change color on hover */
+}
+
+
+/* Callendly button */
+
+.calendly-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.calendly-button {
+    display: inline-block;
+    padding: 12px 24px;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background: #007bff;
+    /* Change color if needed */
+    border-radius: 8px;
+    text-decoration: none;
+    transition: background 0.3s ease, transform 0.2s ease;
+}
+
+.calendly-button:hover {
+    background: #0056b3;
+    transform: scale(1.05);
 }
